--- a/org.neuro4j.studio.core.diagram/build.properties
+++ b/org.neuro4j.studio.core.diagram/build.properties
@@ -4,8 +4,7 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties,\
                messages.properties,\
-               .options,\
-               lib/
-jars.compile.order = .
+               .options
+               
 source.. = src/
 output.. = bin/
