--- a/org.neuro4j.studio.core/build.properties
+++ b/org.neuro4j.studio.core/build.properties
@@ -1,11 +1,7 @@
 #
 
 bin.includes = .,\
-               model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties,\
-               lib/
-jars.compile.order = .
+               plugin.properties
 source.. = src/
-output.. = bin/
