--- a/org.neuro4j.studio.workflow/build.properties
+++ b/org.neuro4j.studio.workflow/build.properties
@@ -1,14 +1,11 @@
 bin.includes = META-INF/,\
                neuro4j-workflow-core.jar,\
                neuro4j-workflow-common.jar,\
-               commons-codec-1.6.jar,\
-               fluent-hc-4.2.5.jar,\
                slf4j-api-1.6.1.jar,\
                slf4j-log4j12-1.6.1.jar,\
                log4j-1.2.16.jar,\
-               commons-httpclient-3.1.jar,\
                neuro4j-logic-web.jar,\
                commons-logging-1.1.3.jar,\
                commons-collections-3.2.1.jar,\
-               commons-beanutils-1.8.3.jar,\
-               commons-logging-1.1.1.jar
+               commons-beanutils-1.8.3.jar
+
