--- a/org.neuro4j.studio.workflow/build.properties
+++ b/org.neuro4j.studio.workflow/build.properties
@@ -4,7 +4,7 @@ bin.includes = META-INF/,\
                slf4j-api-1.6.1.jar,\
                slf4j-log4j12-1.6.1.jar,\
                log4j-1.2.16.jar,\
-               neuro4j-logic-web.jar,\
+               neuro4j-web-core.jar,\
                commons-logging-1.1.3.jar,\
                commons-collections-3.2.1.jar,\
                commons-beanutils-1.8.3.jar
