--- a/org.neuro4j.studio.workflow/pom.xml
+++ b/org.neuro4j.studio.workflow/pom.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.neuro4j</groupId>
-    <artifactId>studio</artifactId>
-    <version>1.0.1</version>
-  </parent>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.neuro4j</groupId>
+		<artifactId>studio</artifactId>
+		<version>2.0.1</version>
+	</parent>
 
-  <groupId>org.neuro4j</groupId>
-  <artifactId>org.neuro4j.studio.workflow</artifactId>
-   <build>
-  <finalName>org.neuro4j.studio.workflow</finalName>
-<plugins>
-<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.3.2</version>
-                  <configuration>
-                      <finalName>org.neuro4j.studio.workflow</finalName>                   
-                 </configuration>
-   </plugin> 
-</plugins>
-   </build>
-  <packaging>eclipse-plugin</packaging>
- </project>
+	<artifactId>org.neuro4j.studio.workflow</artifactId>
+	<build>
+		<finalName>org.neuro4j.studio.workflow</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<finalName>org.neuro4j.studio.workflow</finalName>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<packaging>eclipse-plugin</packaging>
+</project>
