added fork implementation + fix for custom images

--- a/org.neuro4j.studio.core.edit/plugin.properties
+++ b/org.neuro4j.studio.core.edit/plugin.properties
@@ -43,6 +43,7 @@ _UI_Node_id_feature = Id
 _UI_Node_name_feature = Name
 _UI_JoinNode_result_feature = Result
 _UI_JoinNode_input_feature = Input
+_UI_JoinNode_fork_feature = Fork
 _UI_DecisionNode_clause_feature = Clause
 _UI_DecisionNode_trueExit_feature = True Exit
 _UI_DecisionNode_falseExit_feature = False Exit
@@ -100,6 +101,7 @@ _UI_InOutParameter_className_feature = Class Name
 _UI_InOutParameter_optional_feature = Optional
 _UI_InOutParameter_description_feature = Description
 _UI_FollowByRelationNode_relationName_feature = Relation Name
+_UI_FollowByRelationNode_fork_feature = Fork
 _UI_Relationship_name_feature = Name
 _UI_Relationship_source_feature = Source
 _UI_Relationship_target_feature = Target
